# hackeeg-client-python

./: .gitignore  LICENSE  Pipfile  README.md  chart-plot.py  hackeeg-stream-plot.py  pyproject.toml  setup.py
docs/: conf.py  index.rst  install.rst
docs/_static/: style.css
docs/user/: install.rst  intro.rst  local-streaming.rst  openbci.rst  python-api.rst  quickstart.rst  wifi-streaming.rst
hackeeg/: __init__.py  driver.py
util/: hackeeg-stream-plot.py  upload-to-pypi.sh
