[tool.poetry]
name = "hackeeg-client-python"
version = "0.1.0"
description = ""
authors = ["Adam Feuer <adam@starcat.io>"]

[tool.poetry.dependencies]
python = "^3.9"
pyserial = "*"
bitstring = "*"
numpy = "*"
jsonlines = "*"
msgpack = "*"
autopep8 = "*"
gnureadline = "*"
twine = "*"
#hackeeg-client-python = {path = "."}
pandas = "^2.1.4"
plotly = "^5.18.0"
pyorbital = "^1.8.0"
dash = "^2.14.2"
jupyter-dash = "^0.4.2"
pylsl = "^1.16.2"
orjson = "^3.9.13"

[requires]
python_version = "3"

[tool.poetry.dev-dependencies]
ipython = "*"
sphinx = "*"
recommonmark = "*"
twine = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
